manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${ROLE}
spec:
  defaultBackend:
    service:
      name: ${FRONTEND_SERVICE}
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /apis/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ${BACKEND_SERVICE}
            port:
              number: 80
